# molecular-3d-viewer

./: Cargo.toml  README.md  config.json  index.html
src/: camera.rs  config.rs  geometry.rs  lib.rs  main.rs  pdb_parser.rs  shader.wgsl
