[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true


[dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = { version = "26.0.1", features = ["webgl"] }
pollster = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.4", features = ["derive"] }
nom = "7.1"
mcubes = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
web-sys = { version = "0.3.78", features = [
    "Document",
    "Window",
    "Element",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "File",
    "Blob",
    "FileReader",
    "console",
] }
